@@ -11414,6 +11414,19 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
     <title>Release Notes</title>
 
     <section>
+      <title>Release 5.1-3</title>
+
+      <itemizedlist>
+        <listitem>
+          <para>Shark mode:</para>
+
+          <para>- better support for UserGroupToolAgent (added possibility to
+          use getGroupByEMailAddress and getUserByEMailAddress methods)</para>
+        </listitem>
+      </itemizedlist>
+    </section>
+
+    <section>
       <title>Release 5.1-2</title>
 
       <itemizedlist>
