@@ -1,4 +1,9 @@
-###### TWE 5.1-2 RELEASED ######
+###### TWE 5.1-3 RELEASED ######
+2015-04-17 Sasa Bojanic <sasaboy@together.at>
+   # Shark mode: 
+      - better support for UserGroupToolAgent (added possibility to use getGroupByEMailAddress and getUserByEMailAddress methods)
+
+###### TWE 5.1-2 RELEASED (2015-03-19) ######
 2015-03-16 Sasa Bojanic <sasaboy@together.at>
    # Allowed in-place editing of Id, Name and Value attributes in tables
 
